table styling bug (head and body alignment) fixed

--- a/src/main/web/florence/scss/partials/_typography.scss
+++ b/src/main/web/florence/scss/partials/_typography.scss
@@ -200,28 +200,8 @@ button {
 }
 
 table {
-  /*border-collapse: collapse;*/
-  border-spacing: 0px;
-
-  thead {
-    display: table-header-group;
-  }
-
-  tr {
-    padding-top: $lineheight;
-    padding-bottom: $lineheight;
-    display: block;
-  }
-
   th {
-    padding-right: $gutter;
-    padding-left: $gutter;
     font-size: 18px;
-  }
-
-  td {
-    padding-right: $gutter;
-    padding-left: $gutter;
   }
 }
 
